# murid

./: .gitignore  README.md  config.example.yaml  flake.nix  nixosModule.nix  package.nix  pyproject.toml
.github/workflows/: pylint.yml  pytest.yml
src/hardcoverharvester/: __init__.py  apprise.py  bookMatcher.py  calibre.py  config.py  hardcover.py  hardcoverHarvesterApp.py  hardcoverharvester.py  harvester.py  main.py  myanonamouse.py  qbittorrent.py
src/murid/: __init__.py  apprise.py  bookMatcher.py  book_matcher.py  calibre.py  config.py  hardcover.py  main.py  muridApp.py  murid_app.py  myanonamouse.py  qbittorrent.py
src/murid/clients/: calibre.py  hardcover.py  myanonamouse.py
src/murid/clients/torrent_clients/: __init__.py  qbittorrent.py  torrent_client.py
src/murid/config/: config.py
src/murid/domain/: book.py  book_matcher.py  torrent.py  torrent_selector.py
src/murid/notifications/: apprise.py
src/murid/services/: retry_service.py  service_factory.py  sync_service.py  torrent_discovery.py  torrent_import.py
src/murid/torrentClients/: qbittorrent.py  torrentClients.py
src/murid/torrent_clients/: qbittorrent.py  torrent_client.py
tests/: test_bookMatcher.py  test_calibre.py  test_config.py  test_hardcover.py  test_hardcoverHarvesterApp.py  test_main.py  test_muridApp.py  test_myanonamouse.py  test_qbittorrent.py
tests/clients/: test_calibre.py  test_hardcover.py  test_myanonamouse.py
tests/config/: test_config.py
tests/domain/: test_book.py  test_bookMatcher.py  test_torrent.py  test_torrent_selector.py
tests/notifications/: test_apprise.py
tests/services/: test_retry_service.py  test_service_factory.py  test_sync_service.py  test_torrent_discovery.py  test_torrent_import.py
