[build-system]
requires = [ "hatchling", "hatch-vcs" ]
build-backend = "hatchling.build"

[project]
name = "HardcoverHarvester"
authors = [
    { name="Philip Johansson", email="hardcoverharvester@phlipphlop.me" },
]
description = "A tool to fetch books on Hardcover from MaM"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "rich",
  "rich_argparse",
  "pyyaml",
  "requests",
  "rapidfuzz",
  "qbittorrent-api",
  "croniter",
  "apprise",
]

dynamic = [ "version" ]

[tool.hatch.version]
source = "vcs"
[tool.hatch.build.hooks.vcs]
version-file = "src/hardcoverharvester/_version.py"

[project.scripts]
HardcoverHarvester = "hardcoverharvester.main:main"

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "ruff"
]
tests = [
  "pytest",
  "pytest-cov"
]

[project.urls]
Homepage = "https://git.phlipphlop.me/phlipphlop/HardcoverHarvester"
Issues = "https://git.phlipphlop.me/phlipphlop/HardcoverHarvester/issues"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # warnings
  "F",  # pyflakes (unused imports, etc.)
  "I",  # import sorting
  "B",  # bugbear (potentially buggy code)
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = [
  "-ra"
]

[tool.coverage.run]
source = ["hardcoverharvester"]
