[build-system]
requires = [ "hatchling", "hatch-vcs" ]
build-backend = "hatchling.build"

[project]
name = "murid"
authors = [
    { name="Philip Johansson", email="murid@phlipphlop.me" },
]
description = "A tool to fetch books on Hardcover from MaM"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "rich",
  "rich_argparse",
  "pyyaml",
  "requests",
  "rapidfuzz",
  "qbittorrent-api",
  "croniter",
  "apprise",
]

dynamic = [ "version" ]

[tool.hatch.version]
source = "vcs"
[tool.hatch.build.hooks.vcs]
version-file = "src/murid/_version.py"

[project.scripts]
murid = "murid.main:main"

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "ruff"
]
tests = [
  "pytest",
  "pytest-cov"
]

[project.urls]
Homepage = "https://github.com/flyingpeakock/murid"
Issues = "https://github.com/flyingpeakock/murid/issues"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # warnings
  "F",  # pyflakes (unused imports, etc.)
  "I",  # import sorting
  "B",  # bugbear (potentially buggy code)
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = [
  "-ra"
]

[tool.coverage.run]
source = ["murid"]
